# epazote

./: .gitignore  .justfile  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  a_test.go  block.go  block_test.go  changelog.md  color.go  color_test.go  config.go  config_test.go  decorator.go  do.go  epazote-grafana-dashboard.json  epazote.go  epazote.yml  funcs.go  mail.go  mail_test.go  mailman.go  mailman_test.go  mise.toml  report.go  report_test.go  request.go  request_test.go  scandir.go  scandir_test.go  singleton.go  singleton_test.go  start.go  start_test.go  (+5 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json  postcreate.sh  setup-zsh.sh
.github/workflows/: build.yml  coverage.yml  deploy.yml  test.yml
cmd/epazote/: main.go
contrib/: README.md
contrib/debian/: postinst  prerm
contrib/systemd/: epazote.env.example  epazote.service
off/: report_test.go  scandir_test.go  supervice_test.go
src/: lib.rs
src/cli/: config.rs  globals.rs  mod.rs  start.rs  telemetry.rs
src/cli/actions/: client.rs  metrics.rs  mod.rs  request.rs  run.rs  ssl.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/utils/: mod.rs
test/: bad-url.yml  bad.yml  epazote-bad-email.yml  epazote-basic.yml  epazote-checkpaths-empty.yml  epazote-checkpaths-ne.yml  epazote-checkpaths.yml  epazote-email-badto.yml  epazote-email-from.yml  epazote-email-ifheader-yes.yml  epazote-email-ifheader.yml  epazote-email-ifstatus-yes.yml  epazote-email-ifstatus.yml  epazote-email-noserver.yml  epazote-email-noto.yml  epazote-email-server-ok.yml  epazote-email-server.yml  epazote-email-subject.yml  epazote-email-test-yes.yml  epazote-email-test.yml  epazote-email.yml  epazote-start-noservices.yml  epazote-start.yml  epazote.yml  every.yml  headers.yml  only-services.yml  service2.yml  test.yml
tests/: integration.rs
