[package]
name = "epazote"
version = "3.4.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Automated HTTP (microservices) supervisor 🌿"
documentation = "https://docs.rs/epazote/latest/epazote/"
homepage = "https://epazote.io"
repository = "https://github.com/epazote/epazote/"
readme = "README.md"
keywords = ["metrics", "supervisor", "monitoring"]
categories = ["command-line-utilities", "command-line-interface"]
edition = "2024"
license = "BSD-3-Clause"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.6", features = ["env"] }
futures = "0.3"
futures-util = "0.3"
ignore = "0.4"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "tls", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
prometheus = "0.14"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "form", "rustls", "http2", "charset", "gzip", "brotli", "deflate"] }
rustls = "0.23"
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
webpki = "0.22"
x509-parser = "0.18"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[dev-dependencies]
assert_cmd = "2.2"
ctor = "0.10"
env_logger = "0.11"
mockito = "1.7"
predicates = "3.1"
tempfile = "3.27"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/epazote", dest = "/usr/bin/epazote", mode = "0755" },
    { source = "contrib/systemd/epazote.service", dest = "/etc/systemd/system/epazote.service", mode = "0644" },
    { source = "contrib/systemd/epazote.env.example", dest = "/etc/epazote/epazote.env", mode = "0640" },
]

[package.metadata.deb]
assets = [
    ["target/release/epazote", "/usr/bin/epazote", "755"],
    ["contrib/systemd/epazote.service", "/etc/systemd/system/epazote.service", "644"],
    ["contrib/systemd/epazote.env.example", "/etc/epazote/epazote.env", "640"],
]
depends = ""
maintainer-scripts = "contrib/debian"
